--- a/css.css
+++ b/css.css
@@ -11,7 +11,7 @@ body {
 #wrapper {
     margin-top: 10%;
 }
-.player-1  {
+/* .player-1  {
     color: darkred;
     display: flex;
     justify-content: center;
@@ -31,15 +31,15 @@ body {
     visibility: hidden;
 }
 .active {
-    visibility: visible;
-}
+    visibility: visible; */
+/* } */
 #btn-container {
     display: flex;
     justify-content: space-between;
     width: 300px;
     margin: auto;
 }
-#btn-new {
+/* #btn-new {
     display: flex;    
     justify-content: center;
     background-color: darkcyan;
@@ -52,9 +52,8 @@ body {
     margin-bottom: 10px;
     text-align: center;
     cursor: pointer;
-    font-family:
-}
-#btn-back {
+} */
+/* #btn-back {
     display: flex;
     justify-content: center;
     background-color: darkcyan;
@@ -67,7 +66,7 @@ body {
     margin-bottom: 10px;
     text-align: center;
     cursor: pointer;
-}
+} */
 #container {
     display: flex;
     flex-wrap: wrap;
